fixing bug with boundary overflow

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+html, 
+body {
+    margin: 0;
+    overflow-x: hidden;
+    background-color: #fffbf9;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
 .tooltip {
   position: relative;
   display: inline-block;
